# solana_wallet

./: Cargo.toml  README.md  build.rs
app/: app.slint
app/components/: AppBar.slint  AppButton.slint  BottomNav.slint  Divider.slint
app/pages/: collectibles.slint  explorer.slint  settings.slint  swap.slint  wallet.slint
app/utils/: structs.slint  theming.slint
src/: main.rs  token_price.rs  wallet.rs
